# bilibili-vtuber-desktop

./: .gitignore  .gitmodules  CMakeLists.txt  DisCustomSession.py  bilibili_vtuber.py  build.bat  c_bilibili_vtuber.py  c_bilibili_vtuber.spec  cap_pic_from_video.py  config.ini  config.ini.example  download_bilibili_video.py  go.mod  main.go  onnxModel.cpp  onnxModel.h  readme.md  requirements.txt
helper/: onnx2ckpt.py
src/: onnxModel.cpp  onnxModel.def  onnxModel.h
